# somproject

./: .gitignore  .gitignore~  CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  evaluation.cpp  evaluation.h  execute.sh  execute.sh~  go.sh  go.sh~  main.cpp  main.cpp~  math.cpp  math.h  qdata.cpp  qdata.h  shapeitem.cpp  shapeitem.h  som.cpp  som.h  som.h~  somprojet.pro~  sortingbox.cpp  sortingbox.h  type.h  vecteur.cpp  vecteur.h  windowSom.cpp  windowSom.cpp~  windowSom.h  windowSom.h~
data/: pointsnuages.txt
